src/BadScript.Tests/tests/passing/types/table/properties/foreachKey.bs
t = {
	a = 0
}

aVar = null
aVal = null

foreach k in t
{
	aVar = k
	aVal = t[k]
}

return aVar == "a" && aVal == 0