src/BadScript.Tests/tests/failing/invalid-syntax/invalidForEach_03.bs
t = {}
foreach a in t

	
}